--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Titulo</title>
+</head>
+<body>
+    <header>
+        Cabeçalho
+    </header>
 
+    <main>
+        <p>paragrafo </p>
+        <img id"imagem1" src="nomeimagem.extenção">
+    </main>
+</body>
+</html>
