--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo</title>
+    <title>não as drogas</title>
 </head>
 <body>
     <header>
-        Cabeçalho
+        
+
     </header>
 
     <main>
-        <p>paragrafo </p>
-        <img id"imagem1" src="nomeimagem.extenção">
+        <h1>não as drogas</h1>
+        <p>"Drogas são toda e qualquer substância capaz de alterar as funções fisiológicas ou psicobiológicas de um organismo
+            Dessa maneira, um analgésico ou um antiácido, frequentemente tomados para melhorar mal-estar, também são considerados drogas
+            Entretanto, o termo “drogas” é comumente usado para definir as substâncias ilícitas, ligadas ao tráfico e ao mundo do crime
+            Apesar de não estar errado, definir como drogas apenas essas substâncias é uma abordagem ingênua.</p>
+        <p> É possível observar que boa parte das drogas é legalizada e usada na medicina para tratar os mais variados tipos de doenças.
+            No entanto, algumas delas geram polêmica por causar dependência. No Brasil, há uma grande quantidade de drogas proibidas,
+            mesmo que sejam para tratamento médico."
+        </p>
+        <img id"imagem1" src="imagens.png">
     </main>
 </body>
 </html>
